force-app/main/default/objects/Stage_Startup_Warranty_History__c/Stage_Startup_Warranty_History__c.object-meta.xml
<CustomObject>
    <label>Stage Startup Warranty History</label>
    <nameField>
        <displayFormat>HT-{00000}</displayFormat>
        <label>Stage Startup Warranty History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stage Startup Warranty Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>