force-app/main/default/objects/Stage_Startup_Warranty_History__c/fields/Act_Ship__c.field-meta.xml
<CustomField>
    <fullName>Act_Ship__c</fullName>
    <label>Act. Ship</label>
    <type>Date</type>
</CustomField>