force-app/main/default/objects/Stage_Startup_Warranty_History__c/fields/Billing_Status__c.field-meta.xml
<CustomField>
    <fullName>Billing_Status__c</fullName>
    <label>Billing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Billed</fullName>
            </value>
            <value>
                <fullName>Billed in Full</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>