force-app/main/default/objects/Stage_Startup_Warranty_History__c/fields/IOM_Completed__c.field-meta.xml
<CustomField>
    <fullName>IOM_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IOM Done?</label>
    <type>Checkbox</type>
</CustomField>