force-app/main/default/objects/Stage_Startup_Warranty_History__c/fields/Payment_Received__c.field-meta.xml
<CustomField>
    <fullName>Payment_Received__c</fullName>
    <label>Payment Received</label>
    <type>Date</type>
</CustomField>