force-app/main/default/objects/Stage_Startup_Warranty_History__c/fields/Quote_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Items__c</fullName>
    <label>Quote Line Items</label>
    <referenceTo>Product_Select__c</referenceTo>
    <relationshipLabel>Stage Startup Warranty Histories</relationshipLabel>
    <relationshipName>Stage_Startup_Warranty_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>