force-app/main/default/objects/Stage_Startup_Warranty_History__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <label>Release #</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>