force-app/main/default/objects/Stage_Startup_Warranty_History__c/fields/Submittals__c.field-meta.xml
<CustomField>
    <fullName>Submittals__c</fullName>
    <label>Submittals</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Sent for Approval</fullName>
            </value>
            <value>
                <fullName>Resub</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Waived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>