force-app/main/default/objects/Stage_Startup_Warranty_History__c/fields/Warranty_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_End_Date__c</fullName>
    <label>Warranty End</label>
    <type>Date</type>
</CustomField>