force-app/main/default/objects/Stage_Startup_Warranty_History__c/fields/Warranty_Term__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Term__c</fullName>
    <label>Warranty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>